--- a/Smart Tracking And Follow Up System For Kids/public/css/style.css
+++ b/Smart Tracking And Follow Up System For Kids/public/css/style.css
@@ -62,7 +62,8 @@ body {
   font-size: 16px;
 
 }
-.we_do_care{
+
+.we_do_care {
   margin-right: 60%;
 }
 
@@ -88,29 +89,34 @@ body {
 .navbarflex :hover {
   color: white;
 }
-.logoimage{
+
+.logoimage {
   width: 80px;
   height: 80px;
   margin-left: 20px;
   margin-top: 20px;
 }
+
 @media only screen and (max-width:500px) {
-  .we_do_care{
+  .we_do_care {
     margin-right: 0%;
   }
 }
+
 @media only screen and (max-width:700px) {
-  .we_do_care{
+  .we_do_care {
     margin-right: 5%;
   }
 }
+
 @media only screen and (max-width:800px) {
-  .we_do_care{
+  .we_do_care {
     margin-right: 10%;
   }
 }
+
 @media only screen and (max-width:900px) {
-  .we_do_care{
+  .we_do_care {
     margin-right: 15%;
   }
 }
@@ -158,13 +164,13 @@ body {
   padding-right: 2%;
   position: sticky;
   left: 1%;
-  
+
 }
 
 .side_list_item a:hover {
   background-color: #6A471B;
 
-  
+
 }
 
 .side_list_item a {
@@ -179,10 +185,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
   padding: 5%;
-  
+
 
 }
-.side_list_item a:visited  {
+
+.side_list_item a:visited {
   color: white;
 }
 
@@ -207,7 +214,7 @@ body {
   overflow: auto;
   margin: auto;
   border-radius: 4px;
- 
+
 
 }
 
@@ -216,14 +223,14 @@ table {
   font-size: 13px;
   color: white;
   white-space: nowrap;
-  border-collapse:collapse;
+  border-collapse: collapse;
 }
 
 table>thead {
   background-color: black;
   color: #D19630;
   text-align: center;
-  
+
 }
 
 table>thead th {
@@ -278,10 +285,11 @@ td a {
   transition: 500ms;
 }
 
-.btnimgsize{
+.btnimgsize {
   height: 10px;
   width: 10px;
 }
+
 .border_id {
   border: 1px solid #D19630;
 }
@@ -459,7 +467,7 @@ table>tbody>tr>td>img {
 
 }
 
-input:focus{
+input:focus {
   color: #ffffff;
 }
 
@@ -544,7 +552,7 @@ input:focus{
   box-sizing: border-box;
   /* box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06); */
   padding: 0.25rem;
-  width:150px;
+  width: 150px;
   height: 17px;
   font-size: 10px;
 }
@@ -574,7 +582,7 @@ input:focus{
   transition: all .15s ease-in-out;
 }
 
-.radio-inputs .radio input:checked + .name {
+.radio-inputs .radio input:checked+.name {
   background-color: #D19630;
   font-weight: 600;
 }
@@ -877,6 +885,7 @@ input:focus{
   height: 32px;
   border-radius: 50%;
 }
+
 /*************** End subject page ***************/
 /*************** start activity page ***************/
 
@@ -1049,9 +1058,9 @@ input:focus{
   width: 847px;
   height: 442px;
   flex-wrap: wrap;
- box-shadow: 0px 0px 20px 10px #6a471b7c;
+  box-shadow: 0px 0px 20px 10px #6a471b7c;
   border-radius: 25px;
-  
+
 }
 
 .employeeprofilediv {
@@ -1059,7 +1068,7 @@ input:focus{
   width: 160px;
   height: 190px;
   margin-left: 2%;
-  margin-top: 2%; 
+  margin-top: 2%;
 }
 
 .side_list_tableemployeeprofile {
@@ -1067,48 +1076,56 @@ input:focus{
   height: 100%;
   margin-left: 10%;
   margin-right: 15%;
- 
+
 }
-.employeeprofilepart1{
+
+.employeeprofilepart1 {
   width: 20%;
   width: 200px;
-height: 228px;
-border: 2px solid #6A471B;
-border-radius: 25px;
-margin-top: 82px;
+  height: 228px;
+  border: 2px solid #6A471B;
+  border-radius: 25px;
+  margin-top: 82px;
 
 }
-.employeeprofilepart2{
-  width:40%;
- margin-top: 60px;
- 
+
+.employeeprofilepart2 {
+  width: 40%;
+  margin-top: 60px;
+
 
 }
-.title_Employeeinfo{
+
+.title_Employeeinfo {
   text-align: start;
-width: fit-content;
-height: 25px;
-font-weight: 600;
-font-size: 16px;
-line-height: 25px;
-color: #E6E2C3;
-margin-bottom: 4%;
+  width: fit-content;
+  height: 25px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 25px;
+  color: #E6E2C3;
+  margin-bottom: 4%;
 
 }
-.Employeeinfo{
- width: fit-content;
-height: 25px;
-font-weight: 600;
-font-size: 16px;
-line-height: 25px;
-color: #684B18;
-margin-left: 25px;
-margin-bottom: 4%;
+
+.Employeeinfo {
+  width: fit-content;
+  height: 25px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 25px;
+  color: #684B18;
+  margin-left: 25px;
+  margin-bottom: 4%;
 }
-.image_employee_profile{
-  width: 200px;height: 228px;border-radius: 25px;
+
+.image_employee_profile {
+  width: 200px;
+  height: 228px;
+  border-radius: 25px;
 }
-.employee_name{
+
+.employee_name {
   color: aliceblue;
   margin-top: 20px;
 }
@@ -1123,63 +1140,72 @@ margin-bottom: 4%;
     width: 333.5px;
     height: 300px;
     flex-wrap: wrap;
-   box-shadow: 0px 0px 20px 10px #6a471b7c;
+    box-shadow: 0px 0px 20px 10px #6a471b7c;
     border-radius: 25px;
-    
+
   }
+
   .employeeprofilediv {
     color: white;
     width: 60px;
     height: 90px;
     margin-left: 2%;
-    margin-top: 2%; 
+    margin-top: 2%;
   }
-  
+
   .side_list_tableemployeeprofile {
     width: 65%;
     height: 100%;
     margin-left: 10%;
     margin-right: 15%;
-   
+
   }
-  .employeeprofilepart1{
+
+  .employeeprofilepart1 {
     width: 20%;
     width: 80px;
-  height: 120px;
-  border: 2px solid #6A471B;
-  border-radius: 25px;
-  margin-top: 32px;
-  
+    height: 120px;
+    border: 2px solid #6A471B;
+    border-radius: 25px;
+    margin-top: 32px;
+
   }
-  .employeeprofilepart2{
-    width:40%;
-   margin-top: 5px;
-   
-  
+
+  .employeeprofilepart2 {
+    width: 40%;
+    margin-top: 5px;
+
+
   }
-  .title_Employeeinfo{
+
+  .title_Employeeinfo {
     text-align: start;
-  width: fit-content;
-  font-weight: 600;
-  font-size: 10px;
-  line-height: 25px;
-  color: #E6E2C3;
-  margin-bottom: 2%;
-  
+    width: fit-content;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 25px;
+    color: #E6E2C3;
+    margin-bottom: 2%;
+
   }
-  .Employeeinfo{
-   width: fit-content;
-  font-weight: 600;
-  font-size: 10px;
-  line-height: 25px;
-  color: #684B18;
-  margin-left: 5px;
-  margin-bottom: 2%;
+
+  .Employeeinfo {
+    width: fit-content;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 25px;
+    color: #684B18;
+    margin-left: 5px;
+    margin-bottom: 2%;
   }
-  .image_employee_profile{
-    width: 80px;height: 120px;border-radius: 25px;
+
+  .image_employee_profile {
+    width: 80px;
+    height: 120px;
+    border-radius: 25px;
   }
-  .employee_name{
+
+  .employee_name {
     color: aliceblue;
     margin-top: 20px;
     font-size: 12px;
@@ -1188,224 +1214,211 @@ margin-bottom: 4%;
 
 /*************** End employeeprofile page ***************/
 
-/**************** reham ************************/
 .inputs {
-      
-   
+
+
   text-align: left;
-  
-   margin-left: 100px;
-   margin-right: 100px;
- }
- 
- .lable_r, .input_r{
-   display: block;
-   width: 100%;
-   
-  
-   outline: none;
-   box-sizing: border-box;
- }
- 
- .lable_r {
-   margin-bottom: 4px;
-   margin-left: 20px;
-   color: rgba(245, 245, 245, 1);
- }
- 
- .lable_r:nth-of-type(2) {
-   margin-top: 12px;
- }
- 
- 
- .input_r {
-  
-   
- margin: 20px;
-   border-color: 
-   rgba(209, 150, 48, 0.5);
-   background: rgba(106, 71, 27, 0.15);
-   padding: 10px;
- 
-   height: 50px;
-   font-size: 14px;
-   
-   
- }
-/* .submit{
-  display: flex;
-  justify-content:flex-end;
- align-items: end;
- margin-right: 300px;
- margin-top: 20px;
 
-}*/
- 
+  margin-left: 100px;
+  margin-right: 100px;
+}
 
- 
- 
+.lable_r,
+.input_r {
+  display: block;
+  width: 100%;
 
 
+  outline: none;
+  box-sizing: border-box;
+}
 
- h1 {
-   position: absolute;
-   top: 0;
-   left: 0;
- }
- .main{
- 
-  display: flex;
-justify-content: space-evenly;
-/*align-items: end;*/
-margin-top: 90px;
-margin-left: 90px;
+.lable_r {
+  margin-bottom: 4px;
+  margin-left: 20px;
+  color: rgba(245, 245, 245, 1);
+}
+
+.lable_r:nth-of-type(2) {
+  margin-top: 12px;
+}
+
+
+.input_r {
+
+
+  margin: 20px;
+  border-color:
+    rgba(209, 150, 48, 0.5);
+  background: rgba(106, 71, 27, 0.15);
+  padding: 10px;
+
+  height: 50px;
+  font-size: 14px;
+
 
 }
 
-select{
+h1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.main {
+
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 90px;
+  margin-left: 90px;
+
+}
+
+select {
   background: rgba(106, 71, 27, 0.15);
-  border-color: 
-  rgba(209, 150, 48, 0.5);
+  border-color:
+    rgba(209, 150, 48, 0.5);
   /*margin: 20px;*/
   width: 192.24px;
   height: 41px;
   color: #F5F5F5;
-  
+
 
 }
 
 
 
- h2{
-  font-size: x-large; 
-padding: 10px;
-font-family: 'Laila';
-text-align: center;
-color: #ffffff;
+h2 {
+  font-size: x-large;
+  padding: 10px;
+  font-family: 'Laila';
+  text-align: center;
+  color: #ffffff;
 }
 
 
-.newpage{
-margin-top: 50px;
-margin-left: 15% ;
-justify-content: center;
-padding: 30px ;
+.newpage {
+  margin-top: 50px;
+  margin-left: 15%;
+  justify-content: center;
+  padding: 30px;
 }
 
 
-.submit{
-background-color:#6A471B;
-color:black;
-width: 15%;
- height: 15%;
- font-weight: bold;
-text-align: center;
-border: 1px solid rgba(209, 150, 48, 0.5);
-border-radius: 5%;
-margin-top: 20px;
-
-}
-.type{
-
-height: 50px;
-width: 60%;
-justify-content: center;
-margin-top: 2%;
-/*margin-bottom: 5%;*/
-}
-
-.Disease{
-margin-left: 20%;
-margin-top: 2%;
+.submit {
+  background-color: #6A471B;
+  color: black;
+  width: 15%;
+  height: 15%;
+  font-weight: bold;
+  text-align: center;
+  border: 1px solid rgba(209, 150, 48, 0.5);
+  border-radius: 5%;
+  margin-top: 20px;
 
 }
 
+.type {
 
+  height: 50px;
+  width: 60%;
+  justify-content: center;
+  margin-top: 2%;
+}
 
-h3{
-font-size: x-large; 
-padding: 10px;
-font-family: 'Laila';
-text-align: center;
-color: #ffffff;
+.Disease {
+  margin-left: 20%;
+  margin-top: 2%;
+
 }
 
 
 
-.Subject{
-/* margin-right: 200px;*/
-text-align: left;
+h3 {
+  font-size: x-large;
+  padding: 10px;
+  font-family: 'Laila';
+  text-align: center;
+  color: #ffffff;
+}
+
+
+
+.Subject {
+  /* margin-right: 200px;*/
+  text-align: left;
 }
 
 
 
 
-h4{
-font-size: x-large;  
-font-family: 'Laila';
-text-align: center;
-color: #ffffff;
+h4 {
+  font-size: x-large;
+  font-family: 'Laila';
+  text-align: center;
+  color: #ffffff;
 }
 
 
 
- 
 
-  h5{
-font-size:xx-large; 
-padding: 10%;
 
-font-family: 'Laila';
-text-align: center;
-color:rgba(217, 217, 217, 1);
-/* position: absolute;*/
+h5 {
+  font-size: xx-large;
+  padding: 10%;
+
+  font-family: 'Laila';
+  text-align: center;
+  color: rgba(217, 217, 217, 1);
+  /* position: absolute;*/
 }
 
-.side_list_login{
+.side_list_login {
 
 
-height: 100%;
-margin-left: 15%;
-margin-right: 20%;
-margin-bottom: 20%;
+  height: 100%;
+  margin-left: 15%;
+  margin-right: 20%;
+  margin-bottom: 20%;
 }
 
-.lablogin{
-font-family: 'Laila';
-color: rgba(209, 150, 48, 1);
-font-weight: bold;
-font-size: 20px;
-margin-left: 25%
+.lablogin {
+  font-family: 'Laila';
+  color: rgba(209, 150, 48, 1);
+  font-weight: bold;
+  font-size: 20px;
+  margin-left: 25%
 }
 
-.inputlogin{
-background: rgba(217, 217, 217, 0.5);
-border-color:rgba(217, 217, 217, 0.5) ;
-border-radius: 5px;
-width: 60%; 
-margin-left: 25%;}  
+.inputlogin {
+  background: rgba(217, 217, 217, 0.5);
+  border-color: rgba(217, 217, 217, 0.5);
+  border-radius: 5px;
+  width: 60%;
+  margin-left: 25%;
+}
 
-.loginbutton{
-background-color:black;
-color:  rgba(209, 150, 48, 1);
-width: 20%;
-font-family: 'Laila';
-font-weight: bold;
-font-size: 20px;
-top: 514px;
-margin-left:44%;
-margin-top: 3%;
-border-radius: 5px;
-border-color: #000;
+.loginbutton {
+  background-color: black;
+  color: rgba(209, 150, 48, 1);
+  width: 20%;
+  font-family: 'Laila';
+  font-weight: bold;
+  font-size: 20px;
+  top: 514px;
+  margin-left: 44%;
+  margin-top: 3%;
+  border-radius: 5px;
+  border-color: #000;
 }
 
 .inpu {
-width: 80%;
+  width: 80%;
 }
 
-h6{
-font-size: x-large;  
-font-family: 'Laila';
+h6 {
+  font-size: x-large;
+  font-family: 'Laila';
   text-align: center;
   color: #ffffff;
 }
